# data_collection

./: README.md  pyproject.toml
src/data_collection/: calculate_embeddings.py  data_viz.ipynb  data_viz2.ipynb  fast_move_files.py  filter_english_logs.py  logs_to_pd.py
